# Spartan-BN254

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  README.md
examples/: debug_r1cs.rs  keyless.rs  keyless_benchmark.rs  keyless_full_snark.rs  keyless_real.rs  micro_benchmark.rs  proof_breakdown.rs  scaling_benchmark.rs  simple.rs  test_sparse_poly.rs  verify_correct.rs
src/: commitments.rs  dense_mlpoly.rs  errors.rs  group.rs  hyrax.rs  kzg.rs  lib.rs  math.rs  product_tree.rs  r1cs.rs  r1cs_reader.rs  r1csproof.rs  random.rs  scalar.rs  snark.rs  sparse_mlpoly.rs  sparse_mlpoly_full.rs  sumcheck.rs  timer.rs  transcript.rs  unipoly.rs
src/nizk/: bullet.rs  mod.rs
