[package]
name = "spartan-bn254"
version = "0.1.0"
edition = "2021"
description = "Spartan zkSNARK adapted for BN254 curve (compatible with circom)"

[dependencies]
# Arkworks for BN254 curve
ark-ff = "0.5"
ark-ec = "0.5"
ark-bn254 = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"
ark-poly = "0.5"
ark-poly-commit = "0.5"

# Transcript for Fiat-Shamir
merlin = "3.0"

# Utilities
rand = "0.8"
rand_core = "0.6"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
itertools = "0.12"
flate2 = "1.0"
rayon = { version = "1.10", optional = true }
thiserror = "1.0"
sha3 = "0.10"
digest = "0.10"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"
rand_chacha = "0.3"

[features]
default = ["parallel", "serde"]
parallel = ["rayon", "ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel"]
serde = ["dep:serde", "dep:bincode"]
# Use KZG instead of Hyrax for polynomial commitments (requires trusted setup)
kzg = []

[[example]]
name = "keyless_benchmark"
path = "examples/keyless_benchmark.rs"
